--- a/src/overloadAndOverride/overloading.html
+++ b/src/overloadAndOverride/overloading.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <script>
-       /* function displayName(fName, lName) {
+        function displayName(fName, lName) {
    switch(arguments.length) {
        case 2:
            console.log (`Hi ${fName} ${lName}`);
@@ -20,8 +20,8 @@ function displayName(fName){
     console.log (`i am second ${fName} `);
 } 
 displayName('Ana');    // 'Hi Ana'
-displayName('rahul', 'Jhonson'); */
-   class Sum{
+displayName('rahul', 'Jhonson'); 
+   /*class Sum{
     addNumbers(n1, n2, n3) {
     console.log(n1 + n2 + n3);
     }}
@@ -31,7 +31,7 @@ displayName('rahul', 'Jhonson'); */
 }
    }
    var sum = new Sum();
- sum.addNumbers(1, 2, 3);
+ sum.addNumbers(1, 2, 3);*/
     </script>
 </body>
 </html>
