worked-on-routes

--- a/src/NullishOperator/Nullish.html
+++ b/src/NullishOperator/Nullish.html
@@ -11,12 +11,12 @@
         let user = {
             student:{
             name : '',
-            age:0
+            age:null
         }
     }
     console.log(user.student.name || 'unknown')
     console.log(user.student.age || 20)
-    console.log(user.student.age ?? 20)
+    console.log(user.student.age ?? 10)
         </script>
 </body>
 </html>
